Refactor map-related classes and update package structure for better organization